r148 - october, 3, 2009
    * membre : templates > showSuccess.php > email is crypted thanks to mail
      helper
    * membre : templates > indexSuccess.php > email is crypted thanks to mail
      helper


r147 - october, 31, 2009
    * compte : actions > default values are set when required
    * compte : templates > showSuccess.php > display a message if no update has
      been done yet
    * compteForm : initialize 'mis_a_jour_par' only if object already exists
    

r146 - october, 31, 2009
    * activite : actions > index, show > uses the new myUser method
    * activite : actions > default values are set only when required (new and
      edit)


r145 - october, 31, 2009
    * README and README-FR are up to date
    * CotisationTypeForm : mis_a_jour_par is used only when updating
    * cotisationtype : actions > code refactoring to use new myUser methods
    * /data/updates/r145.sql : 'cotisationtype.mis_a_jour_par' can be null
    * piwam-install.sql is up to date
    * cotisationtype : templates > showSuccess.php has been removed because
      unused
    * cotisationtype : actions > executeShow() has been removed because
      unused
    

r144 - october, 30, 2009
	* cotisation : actions > code refactoring to use new myUser methods
	* CotisationForm : default values are set within the action
	* CotisationForm : field 'mis_a_jour_par' is set only when updating
	* cotisationActionsTests : new tests


r143 - october, 30, 2009
	* sfGuardTestFunctional : new method to create a foreign account
	* compteActionsTest : complete tests


r142 - october, 29, 2009
	* compte : actions > code refactoring to use new myUser methods
	* compteActionsTest.php : new tests
	* loginActionsTest.php has been removed (module doesn't longer exist)
	* AssociationForm.class.php : field 'enregistre_par' has been removed to
	  avoid bugs due to session behaviour
	* sfGuardTestFunctional : signout() method
	* activite : actions > new > field 'mis_a_jour_par' is not set for creation